--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,10 +6,18 @@ on:
       - main
       - master
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,6 +38,7 @@ jobs:
         run: touch .output/public/.nojekyll
 
       - name: Deploy
+        id: deployment
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           ssh-key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
