--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "remark-mermaid": "^0.2.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
